# python-template

./: .gitignore  .pre-commit-config.yaml.example  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: approval-bot.yml  python-test.yml
src/: .coveragerc  pytest.ini
src/scripts/: __init__.py  base.py
src/scripts/ci/: _base.py  approval_bot.py  python_tests.py
src/scripts/python/: linters.py  tests.py
src/tests/example/: test_nothing.py
